cabal-version:   3.0
name:            ageha
version:         0.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      kazu@iij.ad.jp
author:          Kazu Yamamoto
synopsis:        Crypto library on Botan
description:     Crypto library on Botan
category:        Cryptography
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Ageha.Hash
        Ageha.Cipher.AEAD
        Ageha.KDF.HKDF
        Ageha.Types

    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7 && <5,
        bytestring,
        botan-low

test-suite ageha-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:      Cipher.AEADSpec
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base >=4.7 && <5,
        ageha,
        bytestring,
        hspec
